[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "caiquan-pypi-nester" #项目名称
version = "1.4.0" #项目版本
authors = [
  { name="caiquan-pypi", email="825911265@qq.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }  #开源许可
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"